versions/v3.7.0/build/dts/api/bindings/fpga/lattice,ice40-fpga.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/fpga/lattice,ice40-fpga.html
original_path: build/dts/api/bindings/fpga/lattice,ice40-fpga.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# lattice,ice40-fpga (on spi bus)

Vendor: [Lattice Semiconductor](../../bindings.md#dt-vendor-lattice)

## Description

```text
Lattice iCE40 FPGA
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |
| `spi-max-frequency` | `int` | ```text Maximum clock frequency of device's SPI interface in Hz ```  This property is **required**. |
| `duplex` | `int` | ```text Duplex mode, full or half. By default it's always full duplex thus 0 as this is, by far, the most common mode. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0    SPI_FULL_DUPLEX   2048 SPI_HALF_DUPLEX ```  Legal values: `0`, `2048` |
| `frame-format` | `int` | ```text Motorola or TI frame format. By default it's always Motorola's, thus 0 as this is, by far, the most common format. Use the macros not the actual enum value, here is the concordance list (see dt-bindings/spi/spi.h)   0     SPI_FRAME_FORMAT_MOTOROLA   32768 SPI_FRAME_FORMAT_TI ```  Legal values: `0`, `32768` |
| `spi-cpol` | `boolean` | ```text SPI clock polarity which indicates the clock idle state. If it is used, the clock idle state is logic high; otherwise, low. ``` |
| `spi-cpha` | `boolean` | ```text SPI clock phase that indicates on which edge data is sampled. If it is used, data is sampled on the second edge; otherwise, on the first edge. ``` |
| `spi-hold-cs` | `boolean` | ```text In some cases, it is necessary for the master to manage SPI chip select under software control, so that multiple spi transactions can be performed without releasing it. A typical use case is variable length SPI packets where the first spi transaction reads the length and the second spi transaction reads length bytes. ``` |
| `load-mode` | `int` | ```text Configure the method used to load the bitstream. The bitstream may be loaded via 2 separate methods: 0 := load the FPGA via SPI transfer 1 := load the FPGA via bit-banged GPIO Option 0 may be suitable for some high-end microcontrollers. Option 1 is suitable for low-end microcontrollers. This option requires clk-gpios, pico-gpios, gpios-set-reg, and gpios-clear-reg to be defined. Example usage: load-mode = <0>; ```  This property is **required**. |
| `cdone-gpios` | `phandle-array` | ```text Configuration Done output from iCE40. Example usage: cdone-gpios = <&gpio0 0 0>; ```  This property is **required**. |
| `creset-gpios` | `phandle-array` | ```text Configuration Reset input on iCE40. Example usage: creset-gpios = <&gpio0 1 GPIO_PUSH_PULL); ```  This property is **required**. |
| `clk-gpios` | `phandle-array` | ```text SPI Clock GPIO input on iCE40. Example usage: clk-gpios = <&gpio0 5 GPIO_PUSH_PULL>; ``` |
| `pico-gpios` | `phandle-array` | ```text Peripheral-In Controller-Out GPIO input on iCE40. Example usage: pico-gpios = <&gpio0 7 GPIO_PUSH_PULL>; ``` |
| `gpios-set-reg` | `int` | ```text Register address for setting a GPIO. Example usage: gpios-set-reg = <0x60004008>; ``` |
| `gpios-clear-reg` | `int` | ```text Register address for clearing a GPIO. Example usage: gpios-clear-reg = <0x6000400c>; ``` |
| `mhz-delay-count` | `int` | ```text in order to create a 1 MHz square wave in the following process. while(true) {   *gpios_set_reg |= BIT(n);   for(int i = mhz_delay_count; i > 0; --i);   *gpios_clear_reg |= BIT(n);   for(int i = mhz_delay_count; i > 0; --i); } Example usage / default: mhz-delay-count = <0>; ``` |
| `creset-delay-us` | `int` | ```text Delay (in microseconds) between asserting CRESET_B and releasing CRESET_B. Example usage / default: creset-delay-us = <1>; ``` |
| `config-delay-us` | `int` | ```text Delay (in microseconds) after releasing CRESET_B to clear internal configuration memory. Example usage / default: config-delay-us = <1200>; ``` |
| `leading-clocks` | `int` | ```text Prior to sending the bitstream, issue this number of leading clocks with SPI_CS pulled high. Example usage / default: leading-clocks = <8>; ``` |
| `trailing-clocks` | `int` | ```text After sending the bitstream, issue this number of trailing clocks with SPI_CS pulled high. Example usage / default: trailing-clocks = <49>; ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “lattice,ice40-fpga” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
